# SecureDNA

./: .earthlyignore  .gitignore  Cargo.toml  agents_to_install.csv  docker-compose.yml
checksum_proof/: Cargo.toml
checksum_proof/elf/: riscv32im-succinct-zkvm-elf
checksum_proof/program/: Cargo.toml
checksum_proof/program/src/: main.rs
crates/doprf/: Cargo.toml  build.rs
crates/doprf/src/: active_security.rs  prf.rs
crates/doprf_client/: Cargo.toml
crates/doprf_client/src/: doprf_client.rs  operations.rs  scep_client.rs  test_verification.rs
crates/hdbserver/: Cargo.toml
crates/hdbserver/src/: screening.rs  server.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: api_client.rs
crates/http_client/src/api_client_core/: reqwest.rs
crates/incorporate/: Cargo.toml
crates/incorporate/src/: error.rs  incorporate.rs  lib.rs  retry_if.rs
crates/incorporate/src/server_selection/: dns.rs  mod.rs
crates/packed_ristretto/src/: datatype.rs
crates/scep/src/: lib.rs
crates/scep_client_helpers/: Cargo.toml
crates/scep_client_helpers/src/: certs.rs  scep_client.rs
crates/shared_types/src/: requests.rs
crates/synthclient/: Cargo.toml
hash_proof/: Cargo.toml
hash_proof/elf/: riscv32im-succinct-zkvm-elf
hash_proof/program/: Cargo.toml
hash_proof/program/src/: main.rs
hash_proof/script/: Cargo.toml
verification_proof/: Cargo.toml
verification_proof/elf/: riscv32im-succinct-zkvm-elf
verification_proof/program/: Cargo.toml
verification_proof/program/src/: main.rs
