[package]
name = "doprf"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = "2021"

[features]
default = ["centralized_keygen"]
centralized_keygen = []
wasm = ["getrandom/wasm-bindgen"]
sp1 = ["sp1-sdk"]

[dependencies]
# added dependencies
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# SP1 'script dependencies'
sp1-sdk = { version = "3.0.0", optional = true }
tracing = "0.1.40"

base64 = "0.22.0"
base64_helper = { path = "../base64_helper" }
clap = { version = "4.5.0", features = ["derive", "env"] }
curve25519-dalek = {workspace = true, features = ["digest", "rand_core"]}
hex = "0.4"
rand = "0.8.5"
rasn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha3 = "0.10.8"
subtle = "2.6.0"

# added build dependencies
[build-dependencies]
sp1-helper = "3.0.0"
sp1-build = "3.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = "0.2"

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
serde_json = "1.0.108"
itertools = "0.13.0"
