[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
futures = "0.3.31"
curve25519-dalek = { workspace = true }
alloy-sol-types = { workspace = true }
sp1-zkvm = { version = "3.0.0-rc4", features = ["verify"] }
fibonacci-lib = { path = "../lib" }
doprf = { path = "../../crates/doprf", default-features = false }
packed_ristretto = { path = "../../crates/packed_ristretto", default-features = false }
shared_types = { path = "../../crates/shared_types", default-features = false }
doprf_client = { path = "../../crates/doprf_client", default-features = false }
sha2 = "0.10.8"