[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
futures = "0.3.31"
curve25519-dalek = { workspace = true }
alloy-sol-types = { workspace = true }
sp1-zkvm = { version = "3.0.0-rc4", features = ["verify"] }
fibonacci-lib = { path = "../lib" }
doprf = { path = "../../crates/doprf" , default-features = false }
packed_ristretto = { path = "../../crates/packed_ristretto" }
shared_types = { path = "../../crates/shared_types" }
sha2 = "0.10.8"